Replace ingredient set with ingredient list